# ChangeLog for www-servers/tomcat
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-servers/tomcat/ChangeLog,v 1.204 2008/12/20 18:12:22 serkan Exp $

  13 Mar 2009; Mike Weissman <mike@weisso.com> tomcat-5.5.27-r6.ebuild,
  tomcat-6.0.18-r6.ebuild:
  minor tweaks to webapps check

  11 Mar 2009; Mike Weissman <mike@weisso.com> ChangeLog:
  fixed webapps install procedure

  09 Mar 2009; Mike Weissman <mike@weisso.com> ChangeLog:
  fixed tabbing issues

  06 Mar 2009; Mike Weissman <mike@weisso.com> ChangeLog:
  security fixes for bug #261469 and webapp fixes

  04 Mar 2009; Mike Weissman <mike@weisso.com> ChangeLog:
  symlink fix and webapp fixed, thanks jieryn-w

  17 Feb 2009; Mike Weissman <mike@weisso.com> -files/5.5/tomcat.init.2,
  -files/5.5/tomcat-openrc.init, -files/6/tomcat.init,
  -tomcat-5.5.27-r3.ebuild, -tomcat-5.5.27-r4.ebuild,
  -tomcat-6.0.18-r3.ebuild, -tomcat-6.0.18-r4.ebuild:
  removed old ebuilds

  17 Feb 2009; Mike Weissman <mike@weisso.com> +files/5.5/tomcat.init.3,
  +files/6/tomcat.init.2, +tomcat-5.5.27-r5.ebuild,
  +tomcat-6.0.18-r5.ebuild:
  rev bump for init/webapp-check bug 243348,180519

  22 Jan 2009; Mike Weissman <mike@weisso.com> tomcat-6.0.18-r4.ebuild:
  updated misleading einfo blocks

  21 Jan 2009; Mike Weissman <mike@weisso.com> files/5.5/tomcat.init.2,
  files/5.5/tomcat-openrc.init, files/6/tomcat.init,
  files/6/tomcat-openrc.init, +tomcat-5.5.27-r4.ebuild,
  +tomcat-6.0.18-r4.ebuild:
  revbump for init script improvement bug 191611, ebuild improvements for
  bug 180519

  15 Jan 2009; Mike Weissman <mike@weisso.com> tomcat-6.0.18-r3.ebuild:
  added URL for NB bug, thanks fordfrog for help

  12 Jan 2009; Petteri Räty <betelgeuse@gentoo.org>
  tomcat-6.0.18-r3.ebuild:
  Remove trailing white space.

  12 Jan 2009; Mike Weissman <mike@weisso.com> tomcat-6.0.18-r3.ebuild:
  added emerge --config for netbeans for bug #254526
