@@ -5,16 +5,20 @@ AUX 5.5/examples-cal.patch 577 RMD160 bab060b0c65b5a72ebaae6b39721c593d2847282 S
 AUX 5.5/jsr152_jsr154_examples_build_xml.patch 2478 RMD160 39a279b0f64bcf112fdaa26c51e3aaa2c7f7a089 SHA1 15857d3b5eaadd6c11bf271f7e7d4705aface448 SHA256 cdc63acd96a3d13d32c37fcbd975f85d38309a0df87a36bf8f49347dc34a181c
 AUX 5.5/tomcat.conf.2 2927 RMD160 cc5faf4a3774e7498f2c6fe0d652f4ed2cf2a2fd SHA1 84bc4df821e08e3bab86329261f26e74de2a543e SHA256 109ad0c20f64b9ad9c60cca53a42fca7ba547ab27d8efdba1ef77732600af9dd
 AUX 5.5/tomcat.init.3 4456 RMD160 c796c7f7c43edfccc3d0f943b4b9f10f0c64ef39 SHA1 5f9f1864e29fb5070178d90a2fb3c2ce892923ab SHA256 b882c62e114d7ad61fb767b57498709e26596bba27f66bc1002e48de6816e437
+AUX 6/build-xml-620.patch 848 RMD160 d39aaa4ed7264844d38705d2a2ec173a71ce1c8c SHA1 0ae28d765ec8f8ba25a0fb72259e84dafdc0908c SHA256 8c5fa2638638314818db6380d2e0dd8460fc5ea5676228dfb9b7e049286cc761
 AUX 6/build-xml.patch 2786 RMD160 7d05d8c4ddcadf882f918e54c8c51c9c54782944 SHA1 944111d0faacf74c7daabcd3aa07cd68daf4a317 SHA256 ef0d6b59aa09e44c789157200dc472331d46ca30434dfec020edeabf40ca9f30
 AUX 6/catalina.policy 6956 RMD160 957ad3b5dc4aeaa5acd289cdaada0a2e48974d52 SHA1 13b65455c8f52fff9d1b09ea67e93ec7a88f1a47 SHA256 9399efda3f6cfc238fb783fb338060e67aff15d0044b31c3d0265e1f9e5769e5
 AUX 6/examples-cal.patch 565 RMD160 85294480f354eb19340bdc7357690ae55ef5a89f SHA1 e9550e02500f2d9da6f4f7b3c7ca79c1934318ea SHA256 caf76c88d3b67d29a7aadca1485accd01270d986e7bc77281a9b30f0b1582b55
 AUX 6/tomcat.conf 2895 RMD160 36ece62ddff5257c04f47d75b9c77bd4dc198652 SHA1 8fef42463b7bf186e2f1d1aeb083bdb370603265 SHA256 b04b085618be755ad9e1796fcbcbb8c2e192eefda3b240f1c06b0d9cc88f2ff0
+AUX 6/tomcat.init 3529 RMD160 45aabac31804faff713ca3648f4a675e5ea7ea89 SHA1 f2b499fda69d83aecda72742f88ed8bf64f5cfb3 SHA256 744daa31e36e548f76f2997c3e3430b961163bfe0d2ba2ef6d81f5c2ddb0470c
 AUX 6/tomcat.init.2 4118 RMD160 dc077b83f3d2ae8b04935b360ea8bafc2b3c41fc SHA1 30e167422d6a548f78300c6712ee2cbd474e3d0b SHA256 1377ae67d963ef96ba29763d3a00d80ecc0c0ede83888b1c0d267305ecc35164
 DIST apache-tomcat-5.5.27-src.tar.gz 7382057 RMD160 8114fa3be19fd28a5d2d0d7e7087f6d82e0f111f SHA1 c6217d78d2e64fa839a30372bd2724ba75030c14 SHA256 90bc8abcddda604e855c37035653b1e24b31c2f09b7a29235e92d65025f7a334
 DIST apache-tomcat-6.0.18-src.tar.gz 3484249 RMD160 ef85db0d65a4f3bdd3ca821420d06535050b6a93 SHA1 9182b0d6b2d0cb2d60f04be6211f3b3516bc518e SHA256 f5ad5dd12e221d75e25234ca734fb434cf45f3fcea93623232a73dc9bfd03dc4
+DIST apache-tomcat-6.0.20-src.tar.gz 3590562 RMD160 65b1b56132c03855e352e44a24b761bccd65b90c SHA1 ab538484d8d05c83a69c70ab6bf07606282633d8 SHA256 e8f709f0aeda8e164362144aca253249f050bc330e622dbb4196434db9933298
 EBUILD tomcat-5.5.27-r5.ebuild 12018 RMD160 41576e72f8385db5531d452a70dae55832b7521c SHA1 fa592b415bf4f13344695acf2b76ecff49c0b809 SHA256 96d51db2fb8a3ce41ef033c91a9bfe2e1e34d93240305f4dfcf3e862afe371f5
 EBUILD tomcat-5.5.27-r6.ebuild 12486 RMD160 0e72c03c0c8cd99dfaacc345e1c54862eee8ec77 SHA1 8a287a00a13c507ccd916fbc03561b8e8d393bbe SHA256 14715c298c9f9e2d31bb4690ff24f0561eb9f1cda0a7f6c685f1325868195011
 EBUILD tomcat-6.0.18-r5.ebuild 11554 RMD160 7b534480fd9e55b33c1a9c6953ac6c936448f59a SHA1 c2c6f0ed393020259a759f9e982a74b94e52e355 SHA256 0e6da63427bbe26672a168de1a33cf214dec182c4fbede10a635107c1eac3fe3
 EBUILD tomcat-6.0.18-r6.ebuild 11334 RMD160 48b7272173a16a09ea60fc6571fc734354686c50 SHA1 f1013898adb190bfa7c3afafcdb80611ab49ab1c SHA256 a1e85d84f2360e00fa637e5a97b799453f3ff73171cb2d980beeb81a4decdb2a
-MISC ChangeLog 58016 RMD160 57c3a25896e616d95f7d48b71dd275c4d6c93b61 SHA1 b063f3c8c54a93928ab2d303d747d38442e33242 SHA256 6c901ab0583d6ed416445873a28ee8c0bba2e823e706094776599a5527108995
+EBUILD tomcat-6.0.20.ebuild 6725 RMD160 537801c4196eac8073e9f8aec6529c9ba09601cf SHA1 ed6e5f9280d9e007659dd1f620011747d1a3e3c8 SHA256 d65e490645554e2ed1a1c6a02b9b1c943cd864322da0c60e3ea0727ccb6749cf
+MISC ChangeLog 58109 RMD160 eb9704be99e5d805703f129f26fff2aea44165ec SHA1 6a886fc1ebacaa9d2cf09b0a607b07c67201d9f3 SHA256 13ec475c3196f2d725e8cf8e0593f41728b76ccbecbad5a29739f0cff4d7de4c
 MISC metadata.xml 658 RMD160 db94c7bc6ba622acfe88f970aa7d2e6fa1718a2a SHA1 aa25178fefb68df9dee7d8fc0d925a2fbbb655dd SHA256 5ddc2743ca9e3ec0bef7983248a9c8eda9238425288efb3acdecc8a828714bd8
